# cec

./: CMakeLists.txt  Makefile
include/segvc/: astvisitor.hxx  datapipe.hxx  expressions.hxx  expressionvisitor.hxx  irvalue.hxx  qcerrors.hxx  tokenizer.hxx  tokenparser.eval.hxx  tokenparser.hxx  tokens.hxx  typer.hxx  variableentry.hxx
include/segvc/util/: concat.hxx  datapipe.hxx  io.hxx
include/tokenizer/: tokenizer.hxx  tokens.hxx
include/tokenparser/: expressions.hxx  tokenparser.hxx  typer.hxx
programs/: compiler.cxx
src/: expressions.cxx  expressionvisitor.cxx  tokens.cxx
src/tokenizer/: proc.cpp  procAlpNum.cpp  readChar.cpp  readNum.cpp  readString.cpp  readSymbol.cpp  tokenizer.cxx  use.cpp
src/tokenizer/proc/: alpNum.cpp  proc.cpp  symbol.cpp
src/tokenizer/read/: alpNum.cpp  char.cpp  num.cpp  string.cpp  symbol.cpp
src/tokenparser/: eat.cpp  eatDec.cpp  eatFnDec.cpp  eatFnParams.cpp  eatForStatement.cpp  eatTyper.cpp  eatWhileStatement.cpp  expressions.cxx  getPVarT.cpp  proc.cpp  tokenparser.cxx  tokenparser.eval.cxx  use.cpp
src/tokenparser/eval/: eval.cpp  eval0.cpp  eval1.cpp  eval2.cpp  eval3.cpp  evalBinary.cpp  evalPrimary.cpp  evalUnary.cpp  single.cpp  tuple.cpp
src/util/: io.cpp
test/: main.ce  main.segv
